--- a/SpringBoot/MongoBD2/src/main/resources/application.properties
+++ b/SpringBoot/MongoBD2/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=MongoBD2
 spring.data.mongodb.uri=mongodb+srv://user_rs:user_rs@cluster0.0emgj4c.mongodb.net/RecommendationsSystem
+server.port = 8081
